--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
