--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.23",
