--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
