--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@trendyol-js/react-carousel": "^2.0.1",
     "bootstrap": "^5.1.3",
     "carousel-react-rcdev": "0.0.3",
+    "draft-js": "^0.11.7",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-bootstrap-carousel": "^4.1.1",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-responsive-carousel": "^3.2.23",
